feat: doc logout + requisition
